# ConsoleGraphic2DEngine

./: .gitignore  CMakeLists.txt
KrakenEngine/: 1.i  Calambur.cpp  Calambur.s  Input.h  Point.cpp  Point.h
KrakenEngine/Components/: SpriteRenderData.cpp  SpriteRenderData.h  Transform.cpp  Transform.h
KrakenEngine/EntityComponentBase/: Component.cpp  Component.h  ComponentAllocator.cpp  ComponentAllocator.h  ComponentContainer.h  ComponentCreator.cpp  ComponentCreator.h  ComponentPointer.cpp  ComponentPointer.h  ComponentRegistrator.cpp  ComponentRegistrator.h  Entity.cpp  Entity.h  EntityCreator.cpp  EntityCreator.h  GameObject.h
KrakenEngine/EntityComponentBase/ComponentIterator/: ComponentIterator.cpp  ComponentIterator.h  LinearComponentIterator.cpp  (+1 more)
KrakenEngine/EntityContainers/: EntityContainer.cpp  EntityContainer.h
KrakenEngine/EventSystem/: Event.h  MethodContainer.cpp  MethodContainer.h
KrakenEngine/Math/: Matrix.cpp  Matrix.h  Vector.h
KrakenEngine/RendererSystem/: Camera.cpp  Camera.h  RenderField.cpp  RenderField.h  RendererSystem.cpp  RendererSystem.h  Screen.cpp  Screen.h  SpriteRenderer.cpp  SpriteRenderer.h  UIRenderer.h
KrakenEngine/SpriteSystem/: Sprite.h  SpriteLoader.cpp  SpriteLoader.h
KrakenEngine/TestFiles/: CardDragger.cpp  CardDragger.h  CardView.cpp  CardView.h
KrakenEngine/UISystem/: Attractions.h  GameUIPage.cpp  GameUIPage.h  ISelectable.h  Rect.cpp  Rect.h  Selector.h  UIContainer.cpp  UIContainer.h  UIElement.cpp  UIElement.h  UIPage.cpp  UIPage.h  UIUtilites.cpp  UIUtilites.h
KrakenEngine/Utils/: Console.cpp  Console.h
(+3 files in other folders)
